--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
             scroll-behavior: smooth;
             -webkit-overflow-scrolling: touch;
             scrollbar-width: none;
-            height: 100vh;
-            /* altura pantalla */
+
+            height: 100dvh;
+            /* ✅ mejor que 100vh en móviles (viewport dinámico) */
         }
 
         .carousel__track::-webkit-scrollbar {
@@ -51,26 +52,23 @@
 
         /* SLIDE FULLSCREEN (vertical) */
         .carousel__slide {
-            flex: 0 0 100vh;
-            /* ocupa una pantalla */
-            height: 100vh;
+            flex: 0 0 100dvh;
+            height: 100dvh;
             scroll-snap-align: start;
             background: #111;
             display: grid;
             place-items: center;
             position: relative;
-            /* NECESARIO para hotspot */
         }
 
-        /* IMPORTANTE: que img y video ocupen el slide */
         .carousel__slide img,
         .carousel__slide video {
             width: 100%;
             height: 100%;
-            object-fit: cover;
-            /* llena el área */
+            object-fit: contain;
             object-position: center;
             display: block;
+            background: #000;
         }
 
         .carousel__btn {
@@ -253,6 +251,21 @@
 
         // CARRUSEL VERTICAL
         window.addEventListener('load', () => {
+
+            const img = document.querySelector('.carousel img');
+
+            img.onload = () => {
+                const colorThief = new ColorThief();
+                const palette = colorThief.getPalette(img, 2);
+
+                const color1 = `rgb(${palette[0][0]},${palette[0][1]},${palette[0][2]})`;
+                const color2 = `rgb(${palette[1][0]},${palette[1][1]},${palette[1][2]})`;
+
+                document.querySelector('.carousel').style.background =
+                    `linear-gradient(135deg, ${color1}, ${color2})`;
+            };
+
+
             const track = document.getElementById('carouselTrack');
             const slides = Array.from(track.children);
             const dotsWrap = document.getElementById('carouselDots');
