--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 
             display: flex;
             justify-content: center;
-            /* horizontal */
             align-items: center;
-            /* vertical */
         }
 
         .carousel {
@@ -32,18 +30,14 @@
         .carousel__track {
             display: flex;
             flex-direction: column;
-            /* vertical */
             overflow-y: auto;
-            /* scroll vertical */
             overflow-x: hidden;
             scroll-snap-type: y mandatory;
-            /* snap vertical */
             scroll-behavior: smooth;
             -webkit-overflow-scrolling: touch;
             scrollbar-width: none;
 
             height: 100dvh;
-            /* ✅ mejor que 100vh en móviles (viewport dinámico) */
         }
 
         .carousel__track::-webkit-scrollbar {
@@ -55,12 +49,46 @@
             flex: 0 0 100dvh;
             height: 100dvh;
             scroll-snap-align: start;
-            background: #111;
             display: grid;
             place-items: center;
             position: relative;
+            background: #000;
+            overflow: hidden;
         }
 
+        /* Fondo dinámico (se inyecta por JS) */
+        .slide__bg {
+            position: absolute;
+            inset: -30px;
+            z-index: 0;
+            filter: blur(26px) saturate(1.25);
+            transform: scale(1.15);
+            opacity: 0.95;
+            pointer-events: none;
+        }
+
+        .slide__bg img,
+        .slide__bg video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+            display: block;
+        }
+
+        /* Overlay degradado para “look” uniforme */
+        .carousel__slide::after {
+            content: "";
+            position: absolute;
+            inset: 0;
+            z-index: 1;
+            background: linear-gradient(to bottom,
+                    rgba(0, 0, 0, 0.15),
+                    rgba(0, 0, 0, 0.65));
+            pointer-events: none;
+        }
+
+        /* Contenido principal arriba del fondo */
         .carousel__slide img,
         .carousel__slide video {
             width: 100%;
@@ -68,7 +96,9 @@
             object-fit: contain;
             object-position: center;
             display: block;
-            background: #000;
+            background: transparent;
+            position: relative;
+            z-index: 2;
         }
 
         .carousel__btn {
@@ -86,14 +116,12 @@
             z-index: 5;
         }
 
-        /* Botón ARRIBA */
         .carousel__btn--prev {
             top: 10px;
             left: 50%;
             transform: translateX(-50%);
         }
 
-        /* Botón ABAJO */
         .carousel__btn--next {
             bottom: 10px;
             left: 50%;
@@ -107,7 +135,6 @@
             transform: translateY(-50%);
             display: flex;
             flex-direction: column;
-            /* dots en vertical */
             gap: 8px;
             justify-content: center;
             z-index: 5;
@@ -132,24 +159,41 @@
             }
         }
 
-        /* ========================= */
-        /* HOTSPOT (área clickeable) */
-        /* ========================= */
+        /* HOTSPOT */
         .hotspot {
             position: absolute;
             top: 60%;
-            /* ajusta */
             right: 52%;
-            /* ajusta */
             width: 45%;
-            /* ajusta */
             height: 14%;
-            /* ajusta */
             z-index: 10;
             cursor: pointer;
             touch-action: manipulation;
-            /* debug visual (quitar luego) */
-            /* background: rgba(255, 0, 0, 0.25); */
+        }
+
+        .hotspot_novio {
+            position: absolute;
+            top: 70%;
+            right: 25%;
+            width: 45%;
+            height: 4%;
+            z-index: 10;
+            cursor: pointer;
+            touch-action: manipulation;
+            /* border: 2px solid red; */
+        }
+
+        .hotspot_novia {
+            position: absolute;
+            top: 63%;
+            right: 25%;
+            width: 45%;
+            height: 4%;
+            z-index: 10;
+            cursor: pointer;
+            touch-action: manipulation;
+            /* border: 2px solid red; */
+
         }
 
         .audio-btn {
@@ -183,14 +227,11 @@
 </head>
 
 <body>
-    <!-- CARROUSEL -->
     <section class="carousel" aria-label="Carrusel">
         <div class="carousel__track" id="carouselTrack">
             <article class="carousel__slide">
                 <img src="media/1.svg" alt="Slide 1">
-                <button class="audio-btn" id="audioBtn" aria-label="Reproducir música">
-                    🔊
-                </button>
+                <button class="audio-btn" id="audioBtn" aria-label="Reproducir música">🔊</button>
             </article>
 
             <article class="carousel__slide">
@@ -203,9 +244,8 @@
 
             <article class="carousel__slide">
                 <video src="media/4.mp4" autoplay muted loop playsinline></video>
-                <!-- Área clickeable SOLO en una parte -->
                 <a class="hotspot"
-                    href="https://www.google.com/maps/place/Celebra+Eventos/@14.0081206,-89.6107024,1149m/data=!3m2!1e3!4b1!4m6!3m5!1s0x8f62efd333154e6b:0x45c81cf6e28c3871!8m2!3d14.0081206!4d-89.6107024!16s%2Fg%2F11xnlpmgy0!17m2!4m1!1e3!18m1!1e1?entry=ttu&g_ep=EgoyMDI2MDEyMS4wIKXMDSoASAFQAw%3D%3D"
+                    href="https://maps.app.goo.gl/74xZnL4SpKYVFc846?g_st=aw"
                     target="_blank" rel="noopener" aria-label="Ver ubicación en Google Maps">
                 </a>
             </article>
@@ -216,6 +256,20 @@
 
             <article class="carousel__slide">
                 <video src="media/6.mp4" autoplay muted loop playsinline></video>
+                <a class="hotspot_novia"
+                    href="https://wa.me/qr/IPDZIAGYDCROE1"
+                    target="_blank" rel="noopener" aria-label="Ver ubicación en WhatsApp">
+                </a>
+                <a class="hotspot_novio"
+                    href="https://wa.me/qr/MTJBGNQEBAHRO1"
+                    target="_blank" rel="noopener" aria-label="Ver ubicación en WhatsApp">
+                </a>
+            </article>
+            <article class="carousel__slide">
+                <img src="media/7.svg" alt="Slide 2">
+            </article>
+            <article class="carousel__slide">
+                <img src="media/8.svg" alt="Slide 2">
             </article>
         </div>
 
@@ -225,15 +279,13 @@
         <div class="carousel__dots" id="carouselDots" aria-label="Indicadores"></div>
     </section>
 
-    <!-- AUDIO -->
     <audio id="audio" src="musica.mpeg"></audio>
 
     <script>
-        // AUDIO (solo una vez)
+        // AUDIO
         window.addEventListener('load', () => {
             const audio = document.getElementById('audio');
             const btn = document.getElementById('audioBtn');
-
             if (!btn) return;
 
             btn.addEventListener('click', () => {
@@ -249,26 +301,53 @@
             });
         });
 
-        // CARRUSEL VERTICAL
+        // ===== Fondo “degradado” según media (blur + cover + overlay) =====
+        function ensureBackgroundForSlide(slide) {
+            // si ya existe, no duplicar
+            if (slide.querySelector('.slide__bg')) return;
+
+            const media = slide.querySelector('img, video');
+            if (!media) return;
+
+            const bg = document.createElement('div');
+            bg.className = 'slide__bg';
+
+            let bgMedia;
+            if (media.tagName.toLowerCase() === 'img') {
+                bgMedia = document.createElement('img');
+                bgMedia.alt = '';
+                bgMedia.src = media.currentSrc || media.src;
+            } else {
+                // duplicamos el video para que el fondo también “viva”
+                bgMedia = document.createElement('video');
+                bgMedia.src = media.currentSrc || media.src;
+                bgMedia.autoplay = true;
+                bgMedia.muted = true;
+                bgMedia.loop = true;
+                bgMedia.playsInline = true;
+            }
+
+            bg.appendChild(bgMedia);
+            slide.prepend(bg); // al inicio para quedar detrás
+        }
+
         window.addEventListener('load', () => {
-
-            const img = document.querySelector('.carousel img');
-
-            img.onload = () => {
-                const colorThief = new ColorThief();
-                const palette = colorThief.getPalette(img, 2);
-
-                const color1 = `rgb(${palette[0][0]},${palette[0][1]},${palette[0][2]})`;
-                const color2 = `rgb(${palette[1][0]},${palette[1][1]},${palette[1][2]})`;
-
-                document.querySelector('.carousel').style.background =
-                    `linear-gradient(135deg, ${color1}, ${color2})`;
-            };
-
-
             const track = document.getElementById('carouselTrack');
             const slides = Array.from(track.children);
             const dotsWrap = document.getElementById('carouselDots');
+
+            slides.forEach(slide => {
+                ensureBackgroundForSlide(slide);
+
+                // si imagen carga luego, actualiza el fondo con el src final
+                const img = slide.querySelector('img');
+                if (img) {
+                    img.addEventListener('load', () => {
+                        const bgImg = slide.querySelector('.slide__bg img');
+                        if (bgImg) bgImg.src = img.currentSrc || img.src;
+                    });
+                }
+            });
 
             // Crear dots
             slides.forEach((_, i) => {
