--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             font-family: system-ui, sans-serif;
             background: #f5f7fa;
-            min-height: 100vh;
+            /* min-height: 100vh; */
 
             display: flex;
             justify-content: center;
