fix desktop mode

--- a/index.html
+++ b/index.html
@@ -223,6 +223,40 @@
         .audio-btn.is-playing {
             background: rgba(0, 0, 0, 0.8);
         }
+
+        @media (min-width: 768px) {
+            body {
+                padding: 24px;
+            }
+
+            .carousel {
+                width: min(700px, 100%);
+                /* limita ancho */
+                height: 100vh;
+                /* ocupa alto de la pantalla */
+                border-radius: 16px;
+                overflow: hidden;
+            }
+
+            .carousel__track {
+                height: 100vh;
+                /* asegura alto */
+            }
+
+            .carousel__slide {
+                flex: 0 0 100vh;
+                height: 100vh;
+            }
+        }
+
+        @media (min-width: 1024px) {
+
+            .carousel__slide>img,
+            .carousel__slide>video {
+                object-fit: cover;
+                /* prueba cover; si recorta mucho, vuelve a contain */
+            }
+        }
     </style>
 </head>
 
@@ -244,9 +278,8 @@
 
             <article class="carousel__slide">
                 <video src="media/4.mp4" autoplay muted loop playsinline></video>
-                <a class="hotspot"
-                    href="https://maps.app.goo.gl/74xZnL4SpKYVFc846?g_st=aw"
-                    target="_blank" rel="noopener" aria-label="Ver ubicación en Google Maps">
+                <a class="hotspot" href="https://maps.app.goo.gl/74xZnL4SpKYVFc846?g_st=aw" target="_blank"
+                    rel="noopener" aria-label="Ver ubicación en Google Maps">
                 </a>
             </article>
 
@@ -256,13 +289,11 @@
 
             <article class="carousel__slide">
                 <video src="media/6.mp4" autoplay muted loop playsinline></video>
-                <a class="hotspot_novia"
-                    href="https://wa.me/qr/IPDZIAGYDCROE1"
-                    target="_blank" rel="noopener" aria-label="Ver ubicación en WhatsApp">
+                <a class="hotspot_novia" href="https://wa.me/qr/IPDZIAGYDCROE1" target="_blank" rel="noopener"
+                    aria-label="Ver ubicación en WhatsApp">
                 </a>
-                <a class="hotspot_novio"
-                    href="https://wa.me/qr/MTJBGNQEBAHRO1"
-                    target="_blank" rel="noopener" aria-label="Ver ubicación en WhatsApp">
+                <a class="hotspot_novio" href="https://wa.me/qr/MTJBGNQEBAHRO1" target="_blank" rel="noopener"
+                    aria-label="Ver ubicación en WhatsApp">
                 </a>
             </article>
             <article class="carousel__slide">
