--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>2-Boda Mejia Garcia</title>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
     <style>
         body {
             margin: 0;
             font-family: system-ui, sans-serif;
             background: #f5f7fa;
-            /* min-height: 100vh; */
-
             display: flex;
             justify-content: center;
             align-items: center;
@@ -23,10 +23,8 @@
             width: 100%;
             overflow: hidden;
             box-shadow: 0 2px 8px rgba(63, 69, 81, 0.16);
-            /* background: #000; */
         }
 
-        /* TRACK VERTICAL */
         .carousel__track {
             display: flex;
             flex-direction: column;
@@ -36,7 +34,6 @@
             scroll-behavior: smooth;
             -webkit-overflow-scrolling: touch;
             scrollbar-width: none;
-
             height: 100dvh;
         }
 
@@ -44,7 +41,6 @@
             display: none;
         }
 
-        /* SLIDE FULLSCREEN (vertical) */
         .carousel__slide {
             flex: 0 0 100dvh;
             height: 100dvh;
@@ -52,11 +48,9 @@
             display: grid;
             place-items: center;
             position: relative;
-            /* background: #000; */
             overflow: hidden;
         }
 
-        /* Fondo dinámico (se inyecta por JS) */
         .slide__bg {
             position: absolute;
             inset: -30px;
@@ -76,7 +70,6 @@
             display: block;
         }
 
-        /* Overlay degradado para “look” uniforme */
         .carousel__slide::after {
             content: "";
             position: absolute;
@@ -88,7 +81,6 @@
             pointer-events: none;
         }
 
-        /* Contenido principal arriba del fondo */
         .carousel__slide img,
         .carousel__slide video {
             width: 100%;
@@ -180,7 +172,6 @@
             z-index: 10;
             cursor: pointer;
             touch-action: manipulation;
-            /* border: 2px solid red; */
         }
 
         .hotspot_novia {
@@ -192,19 +183,18 @@
             z-index: 10;
             cursor: pointer;
             touch-action: manipulation;
-            /* border: 2px solid red; */
-
         }
 
         .audio-btn {
             position: absolute;
-            bottom: 20px;
-            right: 20px;
+            bottom: 200px;
+            right: 42%;
             z-index: 20;
             width: 56px;
             height: 56px;
             border-radius: 50%;
-            border: none;
+
+            border: 0.5px solid oldlace;
             background: rgba(0, 0, 0, 0.6);
             color: #fff;
             font-size: 24px;
@@ -224,23 +214,20 @@
             background: rgba(0, 0, 0, 0.8);
         }
 
-         @media (min-width: 768px) {
+        @media (min-width: 768px) {
             body {
                 padding: 24px;
             }
 
             .carousel {
                 width: min(700px, 100%);
-                /* limita ancho */
                 height: 100vh;
-                /* ocupa alto de la pantalla */
                 border-radius: 16px;
                 overflow: hidden;
             }
 
             .carousel__track {
                 height: 100vh;
-                /* asegura alto */
             }
 
             .carousel__slide {
@@ -254,7 +241,6 @@
             .carousel__slide>img,
             .carousel__slide>video {
                 object-fit: cover;
-                /* prueba cover; si recorta mucho, vuelve a contain */
             }
         }
     </style>
@@ -264,12 +250,16 @@
     <section class="carousel" aria-label="Carrusel">
         <div class="carousel__track" id="carouselTrack">
             <article class="carousel__slide">
-                <img src="media/1.svg" alt="Slide 1">
-                <button class="audio-btn" id="audioBtn" aria-label="Reproducir música">🔊</button>
+                <video src="media/1.mp4" autoplay muted loop playsinline></video>
+                <!-- ✅ Botón Play/Pausa en el primer slide -->
+                <button class="audio-btn" id="audioBtn" aria-label="Reproducir música">
+                    <i class="fa-solid fa-play"></i>
+                </button>
+
             </article>
 
             <article class="carousel__slide">
-                <img src="media/2.svg" alt="Slide 2">
+                <video src="media/2.mp4" autoplay muted loop playsinline></video>
             </article>
 
             <article class="carousel__slide">
@@ -278,10 +268,8 @@
 
             <article class="carousel__slide">
                 <video src="media/4.mp4" autoplay muted loop playsinline></video>
-                <a class="hotspot"
-                    href="https://maps.app.goo.gl/74xZnL4SpKYVFc846?g_st=aw"
-                    target="_blank" rel="noopener" aria-label="Ver ubicación en Google Maps">
-                </a>
+                <a class="hotspot" href="https://maps.app.goo.gl/74xZnL4SpKYVFc846?g_st=aw" target="_blank"
+                    rel="noopener" aria-label="Ver ubicación en Google Maps"></a>
             </article>
 
             <article class="carousel__slide">
@@ -290,20 +278,18 @@
 
             <article class="carousel__slide">
                 <video src="media/6.mp4" autoplay muted loop playsinline></video>
-                <a class="hotspot_novia"
-                    href="https://wa.me/qr/IPDZIAGYDCROE1"
-                    target="_blank" rel="noopener" aria-label="Ver ubicación en WhatsApp">
-                </a>
-                <a class="hotspot_novio"
-                    href="https://wa.me/qr/MTJBGNQEBAHRO1"
-                    target="_blank" rel="noopener" aria-label="Ver ubicación en WhatsApp">
-                </a>
+                <a class="hotspot_novia" href="https://wa.me/qr/IPDZIAGYDCROE1" target="_blank" rel="noopener"
+                    aria-label="WhatsApp Novia"></a>
+                <a class="hotspot_novio" href="https://wa.me/qr/MTJBGNQEBAHRO1" target="_blank" rel="noopener"
+                    aria-label="WhatsApp Novio"></a>
             </article>
+
             <article class="carousel__slide">
-                <img src="media/7.svg" alt="Slide 2">
+                <video src="media/7.mp4" autoplay muted loop playsinline></video>
             </article>
+
             <article class="carousel__slide">
-                <img src="media/8.svg" alt="Slide 2">
+                <video src="media/8.mp4" autoplay muted loop playsinline></video>
             </article>
         </div>
 
@@ -313,47 +299,80 @@
         <div class="carousel__dots" id="carouselDots" aria-label="Indicadores"></div>
     </section>
 
-    <audio id="audio" src="musica.mpeg"></audio>
+    <audio id="audio" src="musica.mpeg" preload="auto"></audio>
 
     <script>
-        // AUDIO
-        window.addEventListener('load', () => {
-            const audio = document.getElementById('audio');
-            const btn = document.getElementById('audioBtn');
-            if (!btn) return;
-
-            btn.addEventListener('click', () => {
-                if (audio.paused) {
-                    audio.play();
-                    btn.classList.add('is-playing');
-                    btn.innerText = '⏸️';
-                } else {
-                    audio.pause();
-                    btn.classList.remove('is-playing');
-                    btn.innerText = '🔊';
-                }
-            });
-        });
-
-
         window.addEventListener('load', () => {
             const track = document.getElementById('carouselTrack');
             const slides = Array.from(track.children);
             const dotsWrap = document.getElementById('carouselDots');
 
-            slides.forEach(slide => {
+            /* =======================
+               AUDIO CONTROL
+            ======================= */
+            const audio = document.getElementById('audio');
+            const btn = document.getElementById('audioBtn');
+            const icon = btn ? btn.querySelector('i') : null;
 
-                // si imagen carga luego, actualiza el fondo con el src final
-                const img = slide.querySelector('img');
-                if (img) {
-                    img.addEventListener('load', () => {
-                        const bgImg = slide.querySelector('.slide__bg img');
-                        if (bgImg) bgImg.src = img.currentSrc || img.src;
-                    });
+            function setBtnPlaying(isPlaying) {
+                if (!btn || !icon) return;
+                btn.classList.toggle('is-playing', isPlaying);
+                icon.className = isPlaying
+                    ? 'fa-solid fa-pause'
+                    : 'fa-solid fa-play';
+                btn.setAttribute('aria-label', isPlaying ? 'Pausar música' : 'Reproducir música');
+            }
+
+            async function playAudio() {
+                try {
+                    await audio.play();   // requiere gesto del usuario en móvil
+                    setBtnPlaying(true);
+                } catch (e) {
+                    setBtnPlaying(false);
                 }
-            });
+            }
 
-            // Crear dots
+            function pauseAudio() {
+                audio.pause();
+                setBtnPlaying(false);
+            }
+
+            if (btn && audio) {
+                // Estado inicial
+                setBtnPlaying(false);
+
+                // Click Play/Pausa
+                btn.addEventListener('click', () => {
+                    if (audio.paused) playAudio();
+                    else pauseAudio();
+                });
+
+                // 🔒 Cambiar de app / background / pestaña
+                document.addEventListener('visibilitychange', () => {
+                    if (document.hidden) pauseAudio();
+                });
+
+                window.addEventListener('pagehide', pauseAudio); // iOS Safari
+                window.addEventListener('blur', pauseAudio);     // sistema
+
+                // 📍 Si sales del primer slide → pausa música
+                function currentIndex() {
+                    return Math.round(track.scrollTop / track.clientHeight);
+                }
+
+                track.addEventListener('scroll', () => {
+                    if (currentIndex() !== 0 && !audio.paused) pauseAudio();
+                }, { passive: true });
+
+                // Sincronizar icono
+                audio.addEventListener('pause', () => setBtnPlaying(false));
+                audio.addEventListener('play', () => setBtnPlaying(true));
+            }
+
+            /* =======================
+               DOTS + NAVEGACIÓN
+            ======================= */
+
             slides.forEach((_, i) => {
                 const b = document.createElement('button');
                 b.className = 'carousel__dot' + (i === 0 ? ' is-active' : '');
@@ -392,6 +411,7 @@
             window.addEventListener('resize', updateDots);
         });
     </script>
+
 </body>
 
 </html>
