--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             </article>
 
             <article class="carousel__slide">
-                <video src="media/8.mp4" autoplay muted loop playsinline></video>
+                <img src="media/8.svg" alt="Descripción de la imagen">
             </article>
         </div>
 
